2009-07-17  Jan Michael Alonzo  <jmalonzo@webkit.org>

<http://webkit.org/b/18363> [GTK] Combo boxes cannot be opened pressing space

        Reviewed by Holger Freyther.

        Add Gtk to platforms that want to open the menulist using the
        spacebar.

        * dom/SelectElement.cpp:
        (WebCore::SelectElement::menuListDefaultEventHandler):

Canonical link: https://commits.webkit.org/37702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46081 268f45cc-cd09-0410-ab3c-d52691b4dbfc